Added more styles;

--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,7 @@
 .header__lang-link {
-    margin: 0;
-    text-align: right;
     text-decoration: none;
+    font-style: normal;
+    font-weight: normal;
     font-size: 24px;
     line-height: 28px;
     color: #FFFFFF;
@@ -9,23 +9,12 @@
 
 .header__lang-link:hover {
     opacity: .8;
-    transition: opacity 0.15s;
-}
-
-.header__lang-link:first-of-type {
-    padding-right: 18px;
+    transition: opacity .15s;
 }
 
 @media screen and (max-width: 320px) {
     .header__lang-link {
         font-size: 18px;
-        line-height: 20px;
-    }
-}
-
-@media screen and (max-width: 1280px) {
-    .header__lang-link {
-        font-size: 24px;
-        line-height: 28px;
+        line-height: 24px;
     }
 }
