--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,18 +1,12 @@
 .lead__image {
-    position: relative;
-    object-fit: contain;
-    margin-top: 64px;
+    margin-top: 40px;
+    grid-column: 2/3;
+    grid-row: 3/3;
     width: 100%;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
     .lead__image {
-        margin-top: 40px;
-    }
-}
-
-@media screen and (max-width: 1024px) {
-    .lead__image {
-        margin-top: 56px;
+        grid-column: 1/4;
     }
 }
