--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,18 +1,28 @@
 .header {
-    padding: 16px 16px 0;
+    margin: 0 auto;
     display: flex;
-    align-items: baseline;
     justify-content: space-between;
+    padding: 28px 48px 56px;
+    max-width: 1184px;
+}
+
+@media screen and (max-width: 1024px) {
+    .header {
+        max-width: 928px;
+        padding: 28px 48px 48px;
+    }
 }
 
 @media screen and (max-width: 768px) {
     .header {
-        padding: 28px 24px 0;
+        max-width: 720px;
+        padding: 28px 24px 48px;
     }
 }
 
-@media screen and (max-width: 1024px) and (max-width: 1280px) {
+@media screen and (max-width: 320px) {
     .header {
-        padding: 28px 48px 0;
+        max-width: 288px;
+        padding: 16px 16px 48px;
     }
 }
