--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,18 +1,15 @@
-.intro__list{
-    max-width: 690px;
+.intro__list {
     margin: 0;
     padding: 0;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-size: 13px;
-    line-height: 20px;
-    list-style: none;
-    color: #FFFFFF;
+    list-style-type: none;
 }
-
-@media screen and (max-width: 320px){
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     .intro__list {
-        font-size: 12px;
-        line-height: 18px;
+        padding: 0 0 88px 0;
+    }
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .intro__list {
+        padding: 0 0 64px 0;
     }
 }
