--- a/blocks/intro/__span/intro__span.css
+++ b/blocks/intro/__span/intro__span.css
@@ -1,3 +1,6 @@
 .intro__span {
-    font-weight: 600;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 18px;
 }
