--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,9 +1,9 @@
 .intro__text {
-    margin: 40px 0 32px;
+    margin: 0;
+    padding: 0 0 32px 0;
     max-width: 690px;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 26px;
-    color: #FFFFFF;
 }
