--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,23 +1,14 @@
-.intro__title{
-    max-width: 690px;
+.intro__title {
     margin: 0;
-    font-family: 'Inter', ‘Arial’, sans-serif;
+    padding: 0 0 40px 0;
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
     line-height: 58px;
-    color: #FFFFFF;
 }
-@media screen and (min-width: 321px) and (max-width: 767px){
-    .intro__title{
-        font-size: 42px;
-        line-height: 45px;
-        max-width: 320px;
-    }
-}
-@media screen and (max-width: 320px){
-    .intro__title{
-        max-width: 288px;
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .intro__title {
         font-size: 32px;
         line-height: 35px;
     }
