--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,25 +1,25 @@
 .lead__subtitle {
-    font-weight: normal;
+    margin: auto;
+    grid-column: 2/3;
+    width: 640px;
+    font-weight: 400;
+    font-style: normal;
     font-size: 30px;
-    line-height: 36px;
+    line-height: 1.2;
     text-align: center;
-    max-width: 640px;
-    margin: 32px 0 0;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
     .lead__subtitle {
-        margin: 22px 0 0;
+        margin: 0 auto 40px;
+        line-height: 1.25;
         font-size: 16px;
-        line-height: 20px;
-        max-width: 100%;
+        max-width: 288px;
     }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
     .lead__subtitle {
-        font-size: calc(4vw);
-        line-height: normal;
-        max-width: 80%;
+        margin: 0 auto 56px;
     }
 }
