--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,23 +1,20 @@
 .lead__title {
-    font-weight: 900;
-    font-size: 96px;
-    line-height: 100px;
-    text-align: center;
+    margin: 0 auto 16px;
+    padding: 48px;
+    grid-column: 2/3;
     max-width: 720px;
-    margin: 0;
-    transform: translateY(8px);
+    font-weight: 900;
+    font-style: normal;
+    font-size: 96px;
+    line-height: 1.04;
+    text-align: center;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
     .lead__title {
+        margin: 0 auto 16px;
+        line-height: 1.1;
         font-size: 40px;
-        line-height: 44px;
-    }
-}
-
-@media screen and (max-width: 720px) {
-    .lead__title {
-        font-size: calc(12vw);
-        line-height: normal;
+        max-width: 288px;
     }
 }
