--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,27 +1,20 @@
 .lead {
-    margin: 0 auto;
-    max-width: 984px;
-    max-height: 1005px;
-    padding: 42px 0 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template: repeat(4, auto)/ minmax(100px, auto) minmax(auto, 984px) minmax(100px, auto);
+    align-self: center;
+    padding: 0;
 }
 
 @media screen and (max-width: 768px) {
     .lead {
-        padding: 48px 0 0;
+        grid-template: repeat(4, auto)/ 16px 1fr 16px;
     }
+
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
     .lead {
-        padding: 48px 48px 0;
+        grid-template: repeat(4, auto)/ 24px 1fr 24px;
     }
-}
 
-@media screen and (max-width: 1280px) {
-    .lead {
-        padding: 56px 0 0;
-    }
 }
