Added some changes;

--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,4 +1,5 @@
 .header__lang-link {
+    margin-right: 18px;
     text-decoration: none;
     font-style: normal;
     font-weight: normal;
@@ -9,7 +10,7 @@
 
 .header__lang-link:hover {
     opacity: .8;
-    transition: opacity .15s;
+    transition-duration: .3s;
 }
 
 @media screen and (max-width: 320px) {
