--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,8 @@
 .header {
-    margin: 0 auto;
+    margin: 0;
+    padding: 28px 48px 56px;
     display: flex;
     justify-content: space-between;
-    padding: 28px 48px 56px;
     max-width: 1184px;
 }
 
