--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,6 +1,6 @@
 .footer__link {
     text-decoration: none;
-    padding-right: 18px;
+    margin-right: 18px;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -19,8 +19,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .footer__link-list-item {
-        padding-right: 0;
-        padding-bottom: 32px;
+        padding: 0 0 32px;
         font-size: 24px;
         line-height: 24px;
     }
