Added some changes;

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,10 +8,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url('/images/background.jpg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+
+    /*background-image: url('/images/background.jpg');*/
+    /*background-size: contain;*/
+    /*background-repeat: no-repeat;*/
+    /*background-position: center;*/
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
