--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,11 @@
 .cover__subtitle {
     max-width: 360px;
-    margin: 0 auto;
-    padding: 32px 0;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
