--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,14 +1,17 @@
 .cover__title {
-    justify-content: center;
+    margin: 0;
+    padding: 0;
+    max-width: 560px;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     text-align: center;
     color: #FFFFFF;
-    max-width: 560px;
-    margin: 245px auto;
-    padding: 0 0 32px 0;
     z-index: 1;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
