--- a/blocks/places/__title/place__title.css
+++ b/blocks/places/__title/place__title.css
@@ -1,29 +1,23 @@
 .place__title {
     margin: 0;
-    max-width: 484px;
-    font-style: normal;
     font-weight: 900;
     font-size: 72px;
-    line-height: 76px;
-    align-self: end;
+    line-height: 1.06;
 }
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
-    .place__title  {
-        max-width: 440px;
-    }
 
-}
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .place__title  {
-        max-width: 340px;
+@media screen and (max-width: 1023px) {
+    .place__title {
+        line-height: 1.10;
+        width: 90%;
         font-size: 42px;
-        line-height: 46px;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+
+@media screen and (max-width: 767px) {
     .place__title {
-        max-width: 288px;
+        grid-row: 1/2;
+        grid-column: 2/3;
+        line-height: 1.09;
         font-size: 32px;
-        line-height: 35px;
     }
 }
