--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,12 +1,13 @@
 .cover__overlay {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: #2A2C2F;
+    display: flex;
+    flex-direction: column;
+    max-width: 1184px;
     text-decoration: none;
-    opacity: .3;
+    align-items: center;
+    background: rgba(42, 44, 47, 0.3);
 }
+
+
 .cover__overlay:hover {
-    opacity: .8;
-    transition-duration: .5s;
+    background: rgba(42, 44, 47, 0.8);
 }
