--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,22 +1,25 @@
+
 .cover__subtitle {
     max-width: 360px;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-style: normal;
-    font-weight: normal;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 122%;
     text-align: center;
-    color: #FFFFFF;
-    z-index: 1;
+    color: #ffffff;
+    margin: 32px 0 19.14vw 0;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+
+@media screen and (max-width: 768px) {
+    .cover__subtitle{
+        font-size: 2.34vw;
+        margin: 32px 0 14.974vw 0;
+    }
+}
+
+@media screen and (max-width: 320px) {
     .cover__subtitle {
         font-size: 14px;
-        line-height: 16px;
+        line-height: 114%;
+        max-width: 288px;
+        margin: 16px 0 10.313vw 0;
     }
 }
