--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,23 +1,25 @@
 .cover__title {
-    margin: 0;
-    padding: 0;
     max-width: 560px;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-style: normal;
     font-weight: 900;
     font-size: 72px;
-    line-height: 76px;
+    line-height: 106%;
     text-align: center;
-    color: #FFFFFF;
-    z-index: 1;
+    color:#ffffff;
+    margin: 19.14vw 0 0 0;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+
+@media screen and (max-width: 768px) {
+    .cover__title{
+        font-size: 9.38vw;
+        margin: 14.974vw 0 0 0;
+    }
+}
+
+@media screen and (max-width: 320px) {
     .cover__title {
         font-size: 32px;
-        line-height: 35px;
-        padding: 0 0 16px 0;
+        max-width: 288px;
+        line-height: 109%;
+        margin: 10.313vw 0 0 0;
     }
 }
