--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,34 +1,14 @@
 .cover {
-    margin: 0 auto;
-    padding: 0;
-    position: relative;
+    margin: 0 48px;
     max-width: 1184px;
-    min-height: 740px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    /*background-image: url('/images/background.jpg');*/
-    /*background-size: contain;*/
-    /*background-repeat: no-repeat;*/
-    /*background-position: center;*/
+    background-image: url('/images/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media(max-width: 1024px) {
     .cover {
-        min-height: 640px;
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .cover {
-        min-height: 480px;
-    }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .cover {
-        min-height: 200px;
+        margin: 0;
+        padding: 0;
     }
 }
