--- a/blocks/places/__image/place__image.css
+++ b/blocks/places/__image/place__image.css
@@ -1,27 +1,18 @@
 .place__image {
-    width: 460px;
-    height: 460px;
-    grid-row: 2/3;
+    max-width: 95%;
+    align-self: start;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
+@media screen and (max-width: 1279px) {
     .place__image {
-        width: 440px;
-        height: 440px;
+        max-width: 96%;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
     .place__image {
-        width: 340px;
-        height: 340px;
         grid-row: 2/3;
-    }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .place__image {
-        width: 320px;
-        height: 320px;
+        grid-column: 1/4;
+        max-width: 100%;
     }
 }
