--- a/blocks/places/__paragraph/place__paragraph.css
+++ b/blocks/places/__paragraph/place__paragraph.css
@@ -1,17 +1,20 @@
 .place__paragraph {
     margin: 0;
-    padding: 0 0 24px 0;
-    grid-column: 2;
-    max-width: 484px;
-    font-style: normal;
+    padding: 0;
     font-weight: normal;
     font-size: 18px;
-    line-height: 30px;
+    line-height: 1.63;
 }
 
-.place__paragraph:last-of-type {
-    padding-bottom: 0;
-}
+/*.place__paragraph:not(:last-of-type) {*/
+/*    padding-bottom: 26px;*/
+/*}*/
+
+/*@media screen and (max-width: 1023px){*/
+/*    .place__paragraph {*/
+/*        font-size: 16px;*/
+/*    }*/
+/*}*/
 
 @media screen and (min-width: 1024px) and (max-width: 1200px) {
     .place__paragraph {
@@ -29,9 +32,9 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .place__paragraph {
-        padding: 0 16px 24px 16px;
         max-width: 288px;
         font-size: 16px;
         line-height: 26px;
+        padding: 0 16px 24px 16px;
     }
 }
