--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -1,34 +1,41 @@
 .place {
     display: grid;
-    grid-template-columns: 460px 484px;
-    grid-template-rows: auto;
+    grid-template-columns: 1fr 1.05fr;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+    "item__title item__website"
+    "item__image item__subtitle";
     grid-row-gap: 48px;
     grid-column-gap: 40px;
-    padding: 0 0 80px;
+    margin-bottom: 80px;
 }
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
+
+@media screen and (max-width: 1024px) {
     .place {
-        grid-template-columns: 440px 456px;
-        grid-template-rows: auto;
         grid-column-gap: 32px;
     }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+@media screen and (max-width: 854px) {
     .place {
-        grid-template-columns: 340px 352px;
-        grid-template-rows: auto;
         grid-column-gap: 28px;
-        padding: 0 0 72px;
+        margin-bottom: 72px;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+
+@media screen and (max-width: 640px) {
     .place {
-        grid-template-columns: 320px;
-        grid-template-rows: 35px 320px auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto auto;
+        grid-template-areas:
+        "item__title"
+        "item__website"
+        "item__image"
+        "item__subtitle";
         grid-row-gap: 32px;
-        padding: 0 0 48px;
+        margin-bottom: 50px;
     }
-}
-.place:last-of-type {
-    padding-bottom: 0;
+    .place:last-child {
+        margin-bottom: 66px;
+    }
 }
