--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,25 +1,17 @@
-
 .cover__subtitle {
     max-width: 360px;
+    margin: 0;
+    font-style: normal;
+    font-weight: normal;
     font-size: 18px;
-    line-height: 122%;
+    line-height: 22px;
     text-align: center;
-    color: #ffffff;
-    margin: 32px 0 19.14vw 0;
+    color: #FFFFFF;
+    z-index: 1;
 }
-
-@media screen and (max-width: 768px) {
-    .cover__subtitle{
-        font-size: 2.34vw;
-        margin: 32px 0 14.974vw 0;
-    }
-}
-
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .cover__subtitle {
         font-size: 14px;
-        line-height: 114%;
-        max-width: 288px;
-        margin: 16px 0 10.313vw 0;
+        line-height: 16px;
     }
 }
