--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,13 +1,13 @@
 .cover__overlay {
-    display: flex;
-    flex-direction: column;
-    max-width: 1184px;
-    text-decoration: none;
-    align-items: center;
-    background: rgba(42, 44, 47, 0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .3;
+    background-color: #2A2C2F;
 }
-
-
 .cover__overlay:hover {
-    background: rgba(42, 44, 47, 0.8);
+    opacity: .8;
+    transition-duration: .3s;
 }
