--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,25 +1,19 @@
 .cover__title {
     max-width: 560px;
+    margin: 0;
+    padding: 0 0 32px 0;
+    font-style: normal;
     font-weight: 900;
     font-size: 72px;
-    line-height: 106%;
+    line-height: 76px;
     text-align: center;
-    color:#ffffff;
-    margin: 19.14vw 0 0 0;
+    color: #FFFFFF;
+    z-index: 1;
 }
-
-@media screen and (max-width: 768px) {
-    .cover__title{
-        font-size: 9.38vw;
-        margin: 14.974vw 0 0 0;
-    }
-}
-
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .cover__title {
+        padding: 0 0 16px 0;
         font-size: 32px;
-        max-width: 288px;
-        line-height: 109%;
-        margin: 10.313vw 0 0 0;
+        line-height: 35px;
     }
 }
