--- a/blocks/places/__paragraphs/place__paragraphs.css
+++ b/blocks/places/__paragraphs/place__paragraphs.css
@@ -1,15 +1,5 @@
 .place__paragraphs {
-    align-self: start;
-}
-
-/*.place__paragraphs {*/
-/*    margin: 0;*/
-/*    max-width: 484px;*/
-/*}*/
-
-@media screen and (max-width: 767px) {
-    .place__paragraphs {
-        grid-row: 3/4;
-        grid-column: 2/3;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
