--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,18 +1,19 @@
-.places {
-    padding: 0 148px 92px;
+.content {
+    max-width: 1280px;
+    margin: 0 auto;
 }
 @media screen and (min-width: 1024px) and (max-width: 1200px) {
-    .places {
-        padding: 0 48px 92px;
+    .content {
+        max-width: 1024px;
     }
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .places {
-        padding: 0 24px 88px;
+    .content {
+        max-width: 768px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
-    .places {
-        padding: 0 0 64px;
+    .content {
+        max-width: 320px;
     }
 }
