--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     opacity: .3;
-    background-color: #2A2C2F;
+    background-color: #2a2c2f;
 }
 .cover__overlay:hover {
     opacity: .8;
