--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,7 +6,8 @@
     font-size: 18px;
     line-height: 22px;
     text-align: center;
-    color: #FFFFFF;
+    color: #ffffff;
+    text-decoration: none;
     z-index: 1;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
