--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,14 +1,15 @@
 .cover__title {
-    max-width: 560px;
     margin: 0;
     padding: 0 0 32px 0;
+    max-width: 560px;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     text-align: center;
-    color: #FFFFFF;
-    z-index: 1;
+    color: #ffffff;
+    text-decoration: none;
+    z-index: 2;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .cover__title {
