--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,16 +1,22 @@
 .cover {
     position: relative;
+    margin: 0 auto;
     max-width: 1184px;
     min-height: 740px;
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background: url('/images/background.jpg') no-repeat center;
     background-size: contain;
-
+    text-decoration: none;
 }
+
+.cover:hover {
+    opacity: .8;
+    transition-duration: .3s;
+}
+
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .cover {
         min-height: 640px;
