--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,12 +1,12 @@
 .footer__copyright {
     margin: 0;
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 16px;
-    color: #FFFFFF;
+    color: #ffffff;
 }
-
 @media screen and (min-width: 320px) and (max-width: 750px) {
     .footer__copyright {
         padding-top: 14px;
