--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,26 +1,8 @@
 .footer__link {
     text-decoration: none;
-    margin-right: 18px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 18px;
     color: #FFFFFF;
 }
-
-.footer__link:last-of-type {
-    padding-right: 0;
-}
-
 .footer__link:hover {
-    opacity: .8;
-    transition-duration: .3s;
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .footer__link-list-item {
-        padding: 0 0 32px;
-        font-size: 24px;
-        line-height: 24px;
-    }
+    opacity: 0.8;
+    transition-duration: 0.3s;
 }
