--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,13 +1,22 @@
 .footer__links {
-    padding: 0;
     margin: 0;
-    display: flex;
-    flex-direction: row;
+    padding-right: 18px;
+    text-decoration: none;
     list-style-type: none;
+    font-family: "Inter", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 18px;
 }
-
+.footer__links:last-of-type {
+    padding-right: 0;
+}
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .footer__links {
-        flex-direction: column;
+        padding-right: 0;
+        padding-bottom: 32px;
+        font-size: 24px;
+        line-height: 24px;
     }
 }
