--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,18 +1,16 @@
 .footer {
     margin: 0 auto;
-    padding: 92px 48px 24px;
+    padding: 92px 48px 24px 48px;
+    max-width: 1184px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    max-width: 1184px;
 }
-
-@media screen and (min-width: 768px) and (min-width: 1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     .footer {
         padding: 92px 24px 24px;
     }
 }
-
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .footer {
         padding: 64px 16px 24px;
