--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,18 +1,17 @@
 .header__lang-link {
-    margin-right: 18px;
     text-decoration: none;
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
-    color: #FFFFFF;
+    color: #ffffff;
 }
-
 .header__lang-link:hover {
+    text-decoration: underline;
     opacity: .8;
     transition-duration: .3s;
 }
-
 @media screen and (max-width: 320px) {
     .header__lang-link {
         font-size: 18px;
