--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,26 +1,23 @@
 .header {
-    margin: 0;
-    padding: 28px 48px 56px;
     display: flex;
     justify-content: space-between;
+    padding: 28px 48px 56px;
     max-width: 1184px;
+    margin: 0 auto;
 }
-
 @media screen and (max-width: 1024px) {
     .header {
         max-width: 928px;
         padding: 28px 48px 48px;
     }
 }
-
 @media screen and (max-width: 768px) {
     .header {
         max-width: 720px;
         padding: 28px 24px 48px;
     }
 }
-
-@media screen and (max-width: 319px) {
+@media screen and (max-width: 320px) {
     .header {
         max-width: 288px;
         padding: 16px 16px 48px;
