--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,11 +1,21 @@
 .lead__caption {
-    grid-column: 2/3;
-    margin: 8px 0 0;
-    padding: 0;
-    font-weight: 400;
+    align-content: start;
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
+    font-weight: normal;
     font-size: 10px;
-    line-height: 1.4;
+    line-height: 14px;
     letter-spacing: 0.15em;
     text-transform: uppercase;
+    color: #FFFFFF;
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .lead__caption {
+        padding-left: 24px;
+    }
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .lead__caption {
+        padding-left: 16px;
+    }
 }
