--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,12 +1,20 @@
 .lead__image {
-    margin-top: 40px;
-    grid-column: 2/3;
-    grid-row: 3/3;
-    width: 100%;
+    max-width: 984px;
+    max-height: 615px;
+    margin: 0;
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 1024px) and (max-width: 1200px) {
     .lead__image {
-        grid-column: 1/4;
+        max-width: 928px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .lead__image {
+        max-width: 768px;
+    }
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .lead__image {
+        max-width: 320px;
     }
 }
