--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,25 +1,24 @@
 .lead__subtitle {
-    margin: auto;
-    grid-column: 2/3;
-    width: 640px;
-    font-weight: 400;
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
+    font-weight: normal;
     font-size: 30px;
-    line-height: 1.2;
+    line-height: 36px;
+    color: #FFFFFF;
     text-align: center;
+    max-width: 640px;
+    margin: 0;
+    padding: 0 0 64px 0;
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 1024px) and (max-width: 1200px) {
     .lead__subtitle {
-        margin: 0 auto 40px;
-        line-height: 1.25;
-        font-size: 16px;
-        max-width: 288px;
+        padding: 0 0 56px 0;
     }
 }
-
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .lead__subtitle {
-        margin: 0 auto 56px;
+        font-size: 16px;
+        line-height: 20px;
+        padding: 0 0 40px 0;
     }
 }
