--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,20 +1,19 @@
 .lead__title {
-    margin: 0 auto 16px;
-    padding: 48px;
-    grid-column: 2/3;
-    max-width: 720px;
-    font-weight: 900;
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
+    font-weight: 900;
     font-size: 96px;
-    line-height: 1.04;
+    line-height: 100px;
+    color: #FFFFFF;
     text-align: center;
+    max-width: 720px;
+    margin: 0;
+    padding: 0 0 32px 0;
 }
-
-@media screen and (max-width: 768px) {
-    .lead__title {
-        margin: 0 auto 16px;
-        line-height: 1.1;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .lead__title{
         font-size: 40px;
-        max-width: 288px;
+        line-height: 44px;
+        padding: 0 0 16px 0;
     }
 }
