--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,4 +1,18 @@
 .photo-grid__item {
-    object-fit: cover;
-    width: 100%;
+    max-width: 284px;
+}
+@media screen and (min-width: 1024px) and (max-width: 1200px) {
+    .photo-grid__item {
+        max-width: 300px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .photo-grid__item {
+        max-width: 352px;
+    }
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .photo-grid__item {
+        max-width: 288px;
+    }
 }
