--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,19 +1,34 @@
 .photo-grid {
-    margin: 0;
-    padding: 92px 0;
+    margin: 0 auto;
+    padding: 0 0 92px 0;
+    max-width: 1184px;
     display: grid;
-    grid-template: 1fr / minmax(48px, auto) minmax(auto, 1184px) minmax(48px, auto);
+    grid-template-columns: repeat(4, 285px);
+    grid-template-rows: repeat(3, 215px);
+    grid-gap: 16px;
 }
-
-
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 1024px) and (max-width: 1200px) {
     .photo-grid {
-        grid-template: 1fr / 24px 1fr 24px;
+        max-width: 928px;
+        grid-template-columns: repeat(3, 300px);
+        grid-template-rows: repeat(4, 225px);
+        grid-gap: 14px;
     }
 }
-
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     .photo-grid {
-        grid-template: 1fr / 16px 1fr 16px;
+        padding: 0 0 88px 0;
+        max-width: 720px;
+        grid-template-columns: repeat(2, 352px);
+        grid-template-rows: repeat(6, 264px);
+        grid-gap: 16px;
+    }
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .photo-grid {
+        padding: 0 0 64px 0;
+        max-width: 288px;
+        grid-template-columns: 288px;
+        grid-gap: 12px;
     }
 }
