--- a/blocks/places/__image/place__image.css
+++ b/blocks/places/__image/place__image.css
@@ -1,18 +1,24 @@
 .place__image {
-    max-width: 95%;
-    align-self: start;
+    width: 460px;
+    height: 460px;
+    grid-row: 2/3;
 }
-
-@media screen and (max-width: 1279px) {
+@media screen and (min-width: 1024px) and (max-width: 1200px) {
     .place__image {
-        max-width: 96%;
+        width: 440px;
+        height: 440px;
     }
 }
-
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     .place__image {
+        width: 340px;
+        height: 340px;
         grid-row: 2/3;
-        grid-column: 1/4;
-        max-width: 100%;
+    }
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .place__image {
+        width: 320px;
+        height: 320px;
     }
 }
