--- a/blocks/places/__title/place__title.css
+++ b/blocks/places/__title/place__title.css
@@ -1,23 +1,32 @@
 .place__title {
     margin: 0;
+    max-width: 484px;
+    align-self: end;
+    font-family: "Inter", "Arial", sans-serif;
+    font-style: normal;
     font-weight: 900;
     font-size: 72px;
-    line-height: 1.06;
+    line-height: 76px;
+    color: #ffffff;
 }
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+    .place__title  {
+        max-width: 440px;
+    }
 
-@media screen and (max-width: 1023px) {
-    .place__title {
-        line-height: 1.10;
-        width: 90%;
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .place__title  {
+        max-width: 340px;
         font-size: 42px;
+        line-height: 46px;
     }
 }
-
-@media screen and (max-width: 767px) {
-    .place__title {
-        grid-row: 1/2;
-        grid-column: 2/3;
-        line-height: 1.09;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .place__title  {
+        padding: 0 16px;
+        max-width: 288px;
         font-size: 32px;
+        line-height: 35px;
     }
 }
