--- a/blocks/places/__website/place__website.css
+++ b/blocks/places/__website/place__website.css
@@ -1,10 +1,9 @@
-/*.place__website {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: flex-end;*/
-/*}*/
-
-@media screen and (max-width: 767px) {
+.place__website {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .place__website {
         display: none;
     }
