--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,13 +1,14 @@
 .cover__subtitle {
-    max-width: 360px;
     margin: 0;
+    padding: 0;
+    max-width: 360px;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
     text-align: center;
     color: #ffffff;
-    text-decoration: none;
+    font-family: "Inter", "Arial", sans-serif;
     z-index: 1;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
