--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,8 +8,8 @@
     line-height: 76px;
     text-align: center;
     color: #ffffff;
-    text-decoration: none;
-    z-index: 2;
+    font-family: "Inter", "Arial", sans-serif;
+    z-index: 1;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .cover__title {
