--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,8 +7,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: url('/images/background.jpg') no-repeat center;
+    background-image: url('../../images/background.jpg');
     background-size: contain;
+    background-repeat: no-repeat;
     text-decoration: none;
 }
 
