--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,8 +1,9 @@
 .footer__link {
+    display: flex;
     text-decoration: none;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 .footer__link:hover {
-    opacity: 0.8;
-    transition-duration: 0.3s;
+    opacity: .8;
+    transition-duration: .3s;
 }
