Added some changes;

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -10,13 +10,13 @@
     background-image: url('../../images/background.jpg');
     background-size: contain;
     background-repeat: no-repeat;
-    text-decoration: none;
+
 }
 
-.cover:hover {
-    opacity: .8;
-    transition-duration: .3s;
-}
+/*.cover:hover {*/
+/*    opacity: .8;*/
+/*    transition-duration: .3s;*/
+/*}*/
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .cover {
