--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     opacity: .3;
+    min-height: 740px;
     background-color: #2a2c2f;
 }
 .cover__overlay:hover {
