--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,8 +9,10 @@
     text-align: center;
     color: #ffffff;
     font-family: "Inter", "Arial", sans-serif;
+    text-decoration: none !important;
     z-index: 1;
 }
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .cover__subtitle {
         font-size: 14px;
