--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title {
-    margin: 0;
-    padding: 0 0 32px 0;
+    margin: 0 auto;
+    padding: 0 0 32px;
     max-width: 560px;
     font-style: normal;
     font-weight: 900;
@@ -9,11 +9,12 @@
     text-align: center;
     color: #ffffff;
     font-family: "Inter", "Arial", sans-serif;
+    text-decoration: none !important;
     z-index: 1;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .cover__title {
-        padding: 0 0 16px 0;
+        padding: 0 0 16px;
         font-size: 32px;
         line-height: 35px;
     }
