--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,23 +1,13 @@
 .footer__links {
+    padding: 0;
     margin: 0;
-    padding-right: 18px;
     display: flex;
-    text-decoration: none;
+    flex-direction: row;
     list-style-type: none;
-    font-family: "Inter", "Arial", sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 18px;
 }
-.footer__links:last-of-type {
-    padding-right: 0;
-}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .footer__links {
-        padding-right: 0;
-        padding-bottom: 32px;
-        font-size: 24px;
-        line-height: 24px;
+        flex-direction: column;
     }
-}
+} 
