Added final changes;

--- a/blocks/intro/__span/intro__span.css
+++ b/blocks/intro/__span/intro__span.css
@@ -1,8 +1,7 @@
 .intro__span {
-    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
     line-height: 18px;
-    color: #FFFFFF;
+    color: #ffffff;
 }
