--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,11 +1,10 @@
 .intro__text {
-    font-family: "Inter", "Arial", sans-serif;
+    margin: 0;
+    padding: 0 0 32px 0;
+    max-width: 690px;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 26px;
-    color: #FFFFFF;
-    margin: 0;
-    padding: 0 0 32px 0;
-    max-width: 690px;
+    color: #ffffff;
 }
