--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,12 +1,11 @@
 .intro__title {
-    font-family: "Inter", "Arial", sans-serif;
+    margin: 0;
+    padding: 0 0 40px 0;
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
     line-height: 58px;
-    color: #FFFFFF;
-    margin: 0;
-    padding: 0 0 40px 0;
+    color: #ffffff;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .intro__title {
