--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,14 +1,14 @@
 .lead__subtitle {
-    font-family: "Inter", "Arial", sans-serif;
+    margin: 0;
+    padding: 0 0 64px 0;
+    max-width: 640px;
     font-style: normal;
     font-weight: normal;
     font-size: 30px;
     line-height: 36px;
-    color: #FFFFFF;
+    color: #ffffff;
     text-align: center;
-    max-width: 640px;
-    margin: 0;
-    padding: 0 0 64px 0;
+
 }
 @media screen and (min-width: 1024px) and (max-width: 1200px) {
     .lead__subtitle {
@@ -17,8 +17,8 @@
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .lead__subtitle {
+        padding: 0 0 40px 0;
         font-size: 16px;
         line-height: 20px;
-        padding: 0 0 40px 0;
     }
 }
