--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,19 +1,18 @@
 .lead__title {
-    font-family: "Inter", "Arial", sans-serif;
+    margin: 0;
+    padding: 0 0 32px 0;
+    max-width: 720px;
     font-style: normal;
     font-weight: 900;
     font-size: 96px;
     line-height: 100px;
-    color: #FFFFFF;
+    color: #ffffff;
     text-align: center;
-    max-width: 720px;
-    margin: 0;
-    padding: 0 0 32px 0;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .lead__title{
+        padding: 0 0 16px 0;
         font-size: 40px;
         line-height: 44px;
-        padding: 0 0 16px 0;
     }
 }
