--- a/blocks/footer/__link-item/footer__link-item.css
+++ b/blocks/footer/__link-item/footer__link-item.css
@@ -11,8 +11,7 @@
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .footer__link-item {
-        padding-right: 0;
-        padding-bottom: 32px;
+        padding: 0 0 32px;
         font-size: 24px;
         line-height: 24px;
     }
