--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,7 +9,7 @@
     text-align: center;
     color: #ffffff;
     font-family: "Inter", "Arial", sans-serif;
-    text-decoration: none !important;
+    text-decoration: none;
     z-index: 1;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
