--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,4 +1,5 @@
 .header__lang-link {
+    padding-right: 18px;
     text-decoration: none;
     font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
