--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,7 +1,10 @@
 .intro__list {
-    list-style-type: none;
     margin: 0;
     padding: 0 0 92px 0;
+    list-style-type: none;
+    font-size: 12px;
+    line-height: 150%;
+    font-family: "Inter", "Arial", sans-serif;
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .intro__list {
