--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,6 +5,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
-    line-height: 26px;
+    line-height: 163%;
+    font-family: "Inter", "Arial", sans-serif;
     color: #ffffff;
 }
