--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,6 +5,7 @@
     font-weight: 900;
     font-size: 54px;
     line-height: 58px;
+    font-family: "Inter", "Arial", sans-serif;
     color: #ffffff;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
