--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,7 +6,8 @@
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 30px;
+    line-height: 163%;
+    font-family: "Inter", "Arial", sans-serif;
     color: #ffffff;
 }
 .place__paragraph:last-of-type {
@@ -21,7 +22,6 @@
     .place__paragraph {
         max-width: 352px;
         font-size: 16px;
-        line-height: 26px;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -29,6 +29,5 @@
         padding: 0 16px 24px 16px;
         max-width: 288px;
         font-size: 16px;
-        line-height: 26px;
     }
 }
