--- a/blocks/footer/__link-item/footer__link-item.css
+++ b/blocks/footer/__link-item/footer__link-item.css
@@ -1,10 +1,11 @@
 .footer__link-item {
-    padding-right: 18px;
-    font-family: "Inter", "Arial", sans-serif;
+    margin: 0;
+    padding: 0 18px 0 0;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 18px;
+    font-family: "Inter", "Arial", sans-serif;
 }
 .footer__link-item:last-of-type {
     padding-right: 0;
