--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,14 +1,33 @@
 .cover__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: .3;
-    min-height: 740px;
-    background-color: #2a2c2f;
+    margin: 0;
+    padding: 0;
+    width: 1184px;
+    height: 740px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
 }
 .cover__overlay:hover {
     opacity: .8;
     transition-duration: .3s;
+    background-color: #2a2c2f;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1200px) {
+    .cover {
+        max-height: 640px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .cover {
+        max-height: 480px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .cover {
+        max-height: 200px;
+    }
 }
