--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle {
     margin: 0;
-    padding: 0;
+    padding: 32px 0 0;
     max-width: 360px;
     font-style: normal;
     font-weight: normal;
@@ -9,13 +9,19 @@
     text-align: center;
     color: #ffffff;
     font-family: "Inter", "Arial", sans-serif;
-    text-decoration: none;
     z-index: 1;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .cover__subtitle {
-        font-size: 14px;
-        line-height: 16px;
+        padding: 16px 0 0;
+        /*font-size: 14px;*/
+        /*line-height: 16px;*/
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+    .cover__title {
+        padding: 32px 0 0;
     }
 }
