--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,12 +1,13 @@
 .place__title {
     margin: 0;
+    padding: 0;
     max-width: 484px;
     align-self: end;
-    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
+    font-family: "Inter", "Arial", sans-serif;
     color: #ffffff;
 }
 @media screen and (min-width: 1024px) and (max-width: 1280px) {
