--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -22,7 +22,7 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .cover {
         min-height: 200px;
     }
