--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,7 +8,7 @@
     font-family: "Inter", "Arial", sans-serif;
     color: #ffffff;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .intro__title {
         font-size: 32px;
         line-height: 35px;
