--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -13,7 +13,7 @@
         padding: 88px 24px 0;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .intro {
         padding: 64px 16px 0;
     }
