--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -23,7 +23,7 @@
         grid-template-rows: repeat(6, 264px);
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .photo-grid {
         padding: 0 0 64px;
         max-width: 288px;
