--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -12,7 +12,7 @@
         max-width: 768px;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .content {
         max-width: 320px;
     }
