--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -12,7 +12,7 @@
     z-index: 1;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .cover__subtitle {
         padding: 16px 0 0;
         /*font-size: 14px;*/
