--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,7 +8,7 @@
     font-family: "Inter", "Arial", sans-serif;
     color: #ffffff;
 }
-@media screen and (min-width: 320px) and (max-width: 750px) {
+@media screen and (max-width: 750px) {
     .footer__copyright {
         padding-top: 14px;
     }
