--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -11,7 +11,7 @@
         padding: 0 0 88px 0;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .intro__list {
         padding: 0 0 64px 0;
     }
