--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -15,7 +15,7 @@
         padding: 0 0 56px 0;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .lead__subtitle {
         padding: 0 0 40px 0;
         font-size: 16px;
