--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,7 +9,7 @@
     color: #ffffff;
     text-align: center;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .lead__title{
         padding: 0 0 16px 0;
         font-size: 40px;
