--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -11,7 +11,7 @@
         max-width: 928px;
     }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 768px) and (max-width: 1023px) {
     .lead {
         max-width: 768px;
     }
