--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -16,7 +16,7 @@
         grid-row: 2/3;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .place__image {
         width: 320px;
         height: 320px;
