--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -24,7 +24,7 @@
         font-size: 16px;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .place__paragraph {
         padding: 0 16px 24px 16px;
         max-width: 288px;
