--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -23,7 +23,7 @@
         line-height: 46px;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .place__title  {
         padding: 0 16px;
         max-width: 288px;
