--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -6,12 +6,18 @@
     grid-row-gap: 48px;
     grid-column-gap: 40px;
 }
+
+.place:last-of-type {
+    padding-bottom: 0;
+}
+
 @media screen and (min-width: 1024px) and (max-width: 1200px) {
     .place {
         grid-template-columns: 440px 456px;
         grid-column-gap: 32px;
     }
 }
+
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .place {
         padding: 0 0 72px;
@@ -19,14 +25,12 @@
         grid-column-gap: 28px;
     }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+
+@media screen and (max-width: 767px) {
     .place {
         padding: 0 0 48px;
         grid-template-columns: 320px;
         grid-template-rows: 35px 320px auto;
         grid-row-gap: 32px;
     }
-}
-.place:last-of-type {
-    padding-bottom: 0;
 }
