--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,12 +1,17 @@
 .cover__overlay {
-    margin: 0;
-    padding: 0;
-    width: 1184px;
-    height: 740px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    position: relative;
+    background-image: url('../../../images/background.jpg');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
     text-decoration: none;
+    min-height: 740px;
+    width: 100%;
+
 }
 .cover__overlay:hover {
     opacity: .8;
@@ -14,20 +19,18 @@
     background-color: #2a2c2f;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
-    .cover {
-        max-height: 640px;
-    }
+.cover__overlay::before {
+    position: absolute;
+    display: block;
+    content: " ";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .cover {
-        max-height: 480px;
-    }
-}
-
-@media screen and (max-width: 767px) {
-    .cover {
-        max-height: 200px;
+@media screen and (max-width: 1279px) {
+    .cover__overlay {
+        min-height: 62.5vw;
     }
 }
