--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title {
     margin: 0 auto;
-    padding: 195px 0 0;
+    padding: 32px;
     max-width: 560px;
     font-style: normal;
     font-weight: 900;
@@ -14,20 +14,8 @@
 
 @media screen and (max-width: 767px) {
     .cover__title {
-        padding: 33px 0 0;
+        max-width: 288px;
         font-size: 32px;
         line-height: 35px;
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .cover__title {
-        padding: 115px 0 0;
-    }
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
-    .cover__title {
-        padding: 195px 0 0;
     }
 }
