--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,27 +1,22 @@
 .cover__subtitle {
-    margin: 0;
-    padding: 32px 0 0;
+    margin: 0 auto;
     max-width: 360px;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 122%;
     text-align: center;
     color: #ffffff;
     font-family: "Inter", "Arial", sans-serif;
     z-index: 1;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 320px) {
     .cover__subtitle {
-        padding: 16px 0 0;
-        /*font-size: 14px;*/
-        /*line-height: 16px;*/
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1280px) {
-    .cover__title {
-        padding: 32px 0 0;
+        max-width: 288px;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 16px;
+        letter-spacing: 0;
     }
 }
