--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,29 +1,29 @@
 .cover {
-    max-width: 1184px;
-    min-height: 740px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: url('../../images/background.jpg');
-    background-size: contain;
-    background-repeat: no-repeat;
+    margin: 0 auto;
+    width: 100%;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
+@media screen and (min-width: 1280px) {
     .cover {
-        min-height: 640px;
+        max-width: 1184px;
+        min-height: 740px;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
     .cover {
-        min-height: 480px;
+        max-width: 1024px;
     }
 }
 
-@media screen and (max-width: 767px) {
-    .cover {
-        min-height: 200px;
-    }
-}
+/*@media screen and (min-width: 768px) and (max-width: 1023px) {*/
+/*    .cover {*/
+/*        max-width: 768px;*/
+/*    }*/
+/*}*/
+
+/*@media screen and (max-width: 767px) {*/
+/*    .cover {*/
+/*        max-width: 320px;*/
+/*    }*/
+/*}*/
