--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,20 +1,5 @@
 .lead__image {
-    max-width: 984px;
-    max-height: 615px;
     margin: 0;
-}
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
-    .lead__image {
-        max-width: 928px;
-    }
-}
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .lead__image {
-        max-width: 768px;
-    }
-}
-@media screen and (max-width: 767px) {
-    .lead__image {
-        max-width: 320px;
-    }
+    max-width: 100%;
+    max-height: 100%;
 }
