--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -7,7 +7,7 @@
         max-width: 1024px;
     }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
     .content {
         max-width: 768px;
     }
@@ -15,5 +15,11 @@
 @media screen and (max-width: 767px) {
     .content {
         max-width: 320px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .content {
+        max-width: 100%;
     }
 }
