--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,7 @@
 .cover {
     margin: 0 auto;
     width: 100%;
+    height: 100%;
 }
 
 @media screen and (min-width: 1280px) {
@@ -13,6 +14,12 @@
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .cover {
         max-width: 1024px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .content {
+        max-width: 100%;
     }
 }
 
