--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -17,3 +17,9 @@
         flex-direction: column;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .content {
+        max-width: 100%;
+    }
+}
