--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,7 +1,25 @@
 .header__lang-links {
-    margin: 0;
-    padding: 0;
+    padding-left: 0;
     display: flex;
     flex-direction: row;
-    list-style-type: none;
+    list-style: none;
+}
+
+@media screen and (max-width: 1024px) {
+    .header {
+        /*max-width: 928px;*/
+        padding: 28px 48px 48px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .header {
+        /*max-width: 720px;*/
+        padding: 28px 24px 48px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .header {
+        /*max-width: 288px;*/
+        padding: 16px 16px 48px;
+    }
 }
