--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,25 +1,27 @@
 .header {
+    padding: 28px 48px 0;
     display: flex;
-    justify-content: space-between;
-    padding: 28px 48px 56px;
     max-width: 1184px;
-    margin: 0 auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 @media screen and (max-width: 1024px) {
     .header {
         max-width: 928px;
-        padding: 28px 48px 48px;
+        /*padding: 28px 48px 48px;*/
     }
 }
 @media screen and (max-width: 768px) {
     .header {
         max-width: 720px;
-        padding: 28px 24px 48px;
+        /*padding: 28px 24px 48px;*/
     }
 }
 @media screen and (max-width: 320px) {
     .header {
         max-width: 288px;
-        padding: 16px 16px 48px;
+        /*padding: 16px 16px 48px;*/
     }
 }
