--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -9,3 +9,9 @@
     font-family: "Inter", "Arial", sans-serif;
     color: #ffffff;
 }
+
+@media screen and (max-width: 767px) {
+    .intro__list {
+        max-width: 288px;
+    }
+}
