--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,8 @@
 .intro__title {
     margin: 0;
     padding: 0 0 40px 0;
+    display: flex;
+    flex-direction: column;
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
@@ -8,6 +10,7 @@
     font-family: "Inter", "Arial", sans-serif;
     color: #ffffff;
 }
+
 @media screen and (max-width: 767px) {
     .intro__title {
         font-size: 32px;
