--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,20 +1,32 @@
 .intro {
-    margin: 0 auto;
-    max-width: 984px;
+    margin: 0;
     padding: 92px 148px 0;
+    max-width: 984px;
 }
+
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .intro {
         padding: 92px 48px 0;
+        max-width: 690px;
     }
 }
+
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .intro {
         padding: 88px 24px 0;
+        max-width: 720px;
     }
 }
+
 @media screen and (max-width: 767px) {
     .intro {
         padding: 64px 16px 0;
+        max-width: 288px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .content {
+        max-width: 100%;
     }
 }
