--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,24 +1,22 @@
 .place__image {
-    width: 460px;
+    max-width: 460px;
     height: 460px;
-    grid-row: 2/3;
+    object-fit: cover;
+    /*grid-row: 2/3;*/
 }
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .place__image {
-        width: 440px;
-        height: 440px;
+        max-width: 440px;
     }
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .place__image {
-        width: 340px;
-        height: 340px;
-        grid-row: 2/3;
+        max-width: 340px;
+        /*grid-row: 2/3;*/
     }
 }
 @media screen and (max-width: 767px) {
     .place__image {
-        width: 320px;
-        height: 320px;
+        max-width: 320px;
     }
 }
