--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,7 @@
 .place {
     padding: 0 0 80px;
     display: grid;
-    grid-template-columns: 460px 484px;
+    grid-template-columns: 460px 456px;
     grid-template-rows: auto;
     grid-row-gap: 48px;
     grid-column-gap: 40px;
@@ -14,7 +14,7 @@
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .place {
         grid-template-columns: 440px 456px;
-        grid-column-gap: 32px;
+        gap: 48px 32px;
     }
 }
 
@@ -22,7 +22,7 @@
     .place {
         padding: 0 0 72px;
         grid-template-columns: 340px 352px;
-        grid-column-gap: 28px;
+        gap: 48px 28px;
     }
 }
 
@@ -30,7 +30,5 @@
     .place {
         padding: 0 0 48px;
         grid-template-columns: 320px;
-        grid-template-rows: 35px 320px auto;
-        grid-row-gap: 32px;
     }
 }
