--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,32 +1,9 @@
 .cover__overlay {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    background-image: url('../../../images/background.jpg');
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    text-decoration: none;
     min-height: 740px;
     width: 100%;
-
-}
-.cover__overlay:hover {
-    opacity: .8;
-    transition-duration: .3s;
-    background-color: #2a2c2f;
-}
-
-.cover__overlay::before {
-    position: absolute;
-    display: block;
-    content: " ";
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    height: 100%;
+    text-decoration: none;
+    z-index: 2;
 }
 
 @media screen and (max-width: 1279px) {
