--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,8 @@
 .cover__subtitle {
     margin: 0 auto;
-    padding: 0;
+    padding: 0 0 245px;
     max-width: 360px;
+    position: relative;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -9,7 +10,16 @@
     text-align: center;
     color: #ffffff;
     font-family: "Inter", "Arial", sans-serif;
-    z-index: 1;
+    z-index: 5;
+}
+
+@media screen and (max-width: 767px) {
+    .cover__subtitle {
+        padding: 0 0 33px;
+        width: 288px;
+        font-size: 14px;
+        line-height: 16px;
+    }
 }
 
 @media screen and (max-width: 320px) {
