--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,8 @@
 .cover__title {
-    margin: 0 auto;
-    padding: 32px;
+    margin: 0 auto 36px;
+    padding: 245px 0 0;
     max-width: 560px;
+    position: relative;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
@@ -9,12 +10,14 @@
     text-align: center;
     color: #ffffff;
     font-family: "Inter", "Arial", sans-serif;
-    z-index: 1;
+    z-index: 5;
 }
 
 @media screen and (max-width: 767px) {
     .cover__title {
-        max-width: 288px;
+        margin: 0 0 16px;
+        padding: 33px 0 0;
+        width: 288px;
         font-size: 32px;
         line-height: 35px;
     }
