--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,9 @@
+@import url(../vendor/normalize.css);
+
+@import url(../vendor/fonts.css);
+
 @import url(../blocks/root/root.css);
-
 @import url(../blocks/page/page.css);
-
 @import url(../blocks/content/content.css);
 
 @import url(../blocks/header/header.css);
