--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,6 @@
 .lead__caption {
     margin: 0;
-    padding: 0;
+    padding: 5px 0 0;
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
