--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,5 +1,21 @@
 .place__paragraphs {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
+
+
+
+/*@media screen and (max-width: 1024px) {*/
+/*    .place__paragraphs {*/
+/*        padding: 0 32px 0;*/
+/*    }*/
+/*}*/
+
+/*@media screen and (max-width: 767px) {*/
+/*    .place__paragraphs {*/
+/*        padding: 0 28px 0;*/
+/*    }*/
+/*}*/
