--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,13 +1,13 @@
 .cover__overlay {
-    min-height: 740px;
+    max-height: 100%;
     width: 100%;
     height: 100%;
     text-decoration: none;
     z-index: 2;
 }
 
-@media screen and (max-width: 1279px) {
-    .cover__overlay {
-        min-height: 62.5vw;
-    }
-}
+/*@media screen and (max-width: 1279px) {*/
+/*    .cover__overlay {*/
+/*        min-height: 62.5vw;*/
+/*    }*/
+/*}*/
