--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,5 +1,6 @@
 .header__lang-link {
-    padding-right: 18px;
+    margin: 0;
+    padding: 0;
     text-decoration: none;
     font-style: normal;
     font-weight: normal;
@@ -13,7 +14,19 @@
     opacity: .8;
     transition-duration: .3s;
 }
-@media screen and (max-width: 768px) {
+
+.header__lang-link:last-child {
+    padding-left: 18px;
+}
+
+@media screen and (max-width: 1024px) {
+    .header__lang-link {
+        font-size: 24px;
+        line-height: 28px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .header__lang-link {
         font-size: 18px;
         line-height: 20px;
