--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,10 +1,10 @@
 .header__logo {
-    max-width: 176px;
-    max-height: 52px;
+    width: 176px;
+    height: 52px;
 }
 @media screen and (max-width: 767px) {
     .header__logo {
-        max-width: 142px;
-        max-height: 42px;
+        width: 142px;
+        height: 42px;
     }
 }
