--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,5 @@
 .header {
-    padding: 28px 48px 0;
+    padding: 28px 48px 56px;
     display: flex;
     max-width: 1184px;
     flex-direction: row;
@@ -7,21 +7,23 @@
     justify-content: space-between;
     align-items: flex-end;
 }
-@media screen and (max-width: 1024px) {
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
     .header {
-        max-width: 928px;
-        /*padding: 28px 48px 48px;*/
+        padding: 28px 48px 48px;
     }
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 768px) and (max-width: 1023px) {
     .header {
         max-width: 720px;
-        /*padding: 28px 24px 48px;*/
+        padding: 28px 24px 48px;
     }
 }
-@media screen and (max-width: 320px) {
+
+@media screen and (max-width: 767px) {
     .header {
         max-width: 288px;
-        /*padding: 16px 16px 48px;*/
+        padding: 16px 16px 48px;
     }
 }
