--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -13,14 +13,14 @@
 }
 @media screen and (max-width: 1023px ) {
     .lead__image {
-        width: 768px;
+        max-width: 768px;
         height: 480px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .lead__image {
-        width: 320px;
+        max-width: 320px;
         height: 200px;
     }
 }
