--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,8 +1,7 @@
 .place__image {
     max-width: 460px;
-    height: 460px;
-    object-fit: cover;
-    /*grid-row: 2/3;*/
+    object-fit: contain;
+    object-position: top;
 }
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .place__image {
@@ -12,7 +11,6 @@
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .place__image {
         max-width: 340px;
-        /*grid-row: 2/3;*/
     }
 }
 @media screen and (max-width: 767px) {
