--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,8 +1,9 @@
 .place__paragraph {
     margin: 0;
-    padding: 0 0 24px 0;
+    padding: 0 0 25px;
     max-width: 484px;
     grid-column: 2;
+    height: auto;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -25,12 +26,13 @@
     .place__paragraph {
         max-width: 352px;
         font-size: 16px;
+        line-height: 26px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .place__paragraph {
-        padding: 0 16px 24px 16px;
+        padding: 0 16px 25px;
         max-width: 288px;
         font-size: 16px;
     }
