--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     justify-content: flex-end;
 }
+
+@media screen and (max-width: 767px) {
+    .place__website {
+        padding: 0 16px;
+    }
+}
