--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,6 +5,7 @@
     grid-template-rows: auto;
     grid-row-gap: 48px;
     grid-column-gap: 40px;
+    overflow: hidden;
 }
 
 .place:last-of-type {
@@ -20,7 +21,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .place {
-        padding: 0 0 72px;
+        padding: 0 0 73px;
         grid-template-columns: 340px 352px;
         gap: 48px 28px;
     }
@@ -29,6 +30,7 @@
 @media screen and (max-width: 767px) {
     .place {
         padding: 0 0 48px;
-        grid-template-columns: 320px;
+        grid-template-columns: 1fr;
+        grid-row-gap: 32px;
     }
 }
