--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -10,6 +10,6 @@
 }
 @media screen and (max-width: 767px) {
     .footer__copyright {
-        padding-top: 48px;
+        padding: 48px 0 24px;
     }
 }
