--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,13 +1,29 @@
 .cover__overlay {
-    max-height: 100%;
+    display: block;
     width: 100%;
-    height: 100%;
+    max-width: 1184px;
+    min-height: 740px;
     text-decoration: none;
     z-index: 2;
 }
 
-/*@media screen and (max-width: 1279px) {*/
-/*    .cover__overlay {*/
-/*        min-height: 62.5vw;*/
-/*    }*/
-/*}*/
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .cover__overlay {
+        max-width: 1279px;
+        min-height: 640px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .cover__overlay {
+        max-width: 1023px;
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cover__overlay {
+        max-width: 767px;
+        min-height: 200px;
+    }
+}
