--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,11 +3,11 @@
     padding: 0;
     width: 100%;
     max-width: 1184px;
-    height: 740px;
+    min-height: 740px;
     position: relative;
     display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
     font-family: "Inter", "Arial", sans-serif;
     font-weight: normal;
     background-image: url('../../images/background.jpg');
@@ -20,6 +20,7 @@
 .cover::before {
     content: " ";
     position: absolute;
+    max-width: 1184px;
     left: 0;
     top: 0;
     bottom: 0;
@@ -33,32 +34,20 @@
     opacity: .8;
 }
 
-@media screen and (max-width: 1184px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
     .cover {
-        height: calc( 100vw / 1.6 );
+        min-height: 640px;
     }
 }
 
-/*@media screen and (min-width: 1280px) {*/
-/*    .cover {*/
-/*       max-height: 740px;*/
-/*    }*/
-/*}*/
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .cover {
+        min-height: 480px;
+    }
+}
 
-/*@media screen and (min-width: 1024px) and (max-width: 1279px) {*/
-/*    .cover {*/
-/*        min-height: 640px;*/
-/*    }*/
-/*}*/
-
-/*@media screen and (min-width: 768px) and (max-width: 1023px) {*/
-/*    .cover {*/
-/*        min-height: 480px;*/
-/*    }*/
-/*}*/
-
-/*@media screen and (max-width: 320px) {*/
-/*    .content {*/
-/*        min-height: 200px;*/
-/*    }*/
-/*}*/
+@media screen and (max-width: 767px) {
+    .cover {
+        min-height: 200px;
+    }
+}
