--- a/blocks/footer/__link-item/footer__link-item.css
+++ b/blocks/footer/__link-item/footer__link-item.css
@@ -17,4 +17,8 @@
         font-size: 24px;
         line-height: 24px;
     }
+
+    .footer__link-item:last-of-type {
+        padding-bottom: 0;
+    }
 }
