--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -13,7 +13,7 @@
 }
 @media screen and (max-width: 767px) {
     .footer {
-        padding: 64px 16px 24px;
+        padding: 64px 16px 0;
         max-width: 100%;
         flex-direction: column;
     }
