--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,3 +6,19 @@
     font-weight: 400;
     color: #ffffff;
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .page {
+        max-width: 1024px;
+    }
+}
+@media screen and (min-width: 768px)  and (max-width: 1023px) {
+    .page {
+        max-width: 768px;
+    }
+}
+@media screen and (max-width: 767px) {
+    .page {
+        max-width: 320px;
+    }
+}
